<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_1" />
    <item
        android:id="@+id/menu_project"
        android:icon="@drawable/ic_project"
        android:title="@string/tab_2" />
    <item
        android:id="@+id/menu_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/tab_3" />
    <item
        android:id="@+id/menu_official_account"
        android:icon="@drawable/ic_official_account"
        android:title="@string/tab_4" />
    <item
        android:id="@+id/menu_mine"
        android:icon="@drawable/ic_mine"
        android:title="@string/tab_5" />
</menu>