<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <TextView
        style="@style/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="关于作者" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="微信：" />

        <TextView
            android:id="@+id/tvWx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/AppAuthorWX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="邮箱：" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/AppAuthorEmail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="简书：" />

        <TextView
            android:id="@+id/tvJianShu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/AppAuthorJanshu" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:background="@drawable/ripple_bg"
        android:padding="5dp"
        android:text="确定"
        android:textColor="@color/theme_2" />
</LinearLayout>